Add Atomic Classes